--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,52 @@
-@import 'variables';
 @import 'normalize';
+@import 'variables';
+
+body {
+    background-color: $bd-color;
+}
+
+header {
+
+    h1 {
+        text-align: center;
+        text-transform: uppercase;
+        color: $h-color1;
+        font-size: 1.7rem;
+    }
+}
+
+.box {
+    padding: 20px;
+    border-top: 2px solid $bdr-color;
+    border-bottom: 2px solid $bdr-color;
+
+    h2 {
+        font-style: italic;
+        text-align: center;
+        font-size: 2rem;
+        font-family: $font-quote;
+    }
+
+    h3 {
+        text-transform: uppercase;
+        color: $h-color2;
+        font-size: 0.9rem;
+        position: relative;
+        left: 80%;
+        padding-top: 20px;
+    }
+}
+
+.btn-link {
+    padding: 30px;
+
+    .trigger {
+        border-radius: 5px;
+        padding: 10px;
+        cursor: pointer;
+    }
+
+    .tweet {
+        text-decoration: none;
+    }
+}
